Cope with broken dependencies